Harden bounded graph and binary inputs
Enforce graph and output budgets, validate binary metadata and protobuf times, and preserve explicit partial state across callers.

PM-Task: 20260903-1949/t1